<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="ProductEditViewModel">
        <variable
            name="viewModel"
            type="com.example.andoridpos.ui.product.ProductsEditViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/product_name"
                android:paddingEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:text="@{viewModel.product.name}"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/price"
                android:paddingStart="8dp"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.product.price}"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/categories"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                android:padding="8dp"
                app:itemSpacing="5dp"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Food" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Food" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Food" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Food" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Food" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Food" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Food" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Food" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Food" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Food" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Food" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Food" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Food" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Food" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Food" />

            </com.google.android.material.chip.ChipGroup>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/available"
                android:checked="@={viewModel.product.available}"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/imageButton"
                android:layout_width="48dp"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_qr_code"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout3" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/barcode"
                android:paddingEnd="8dp"
                app:layout_constraintEnd_toEndOf="@+id/chipGroup"
                app:layout_constraintStart_toStartOf="@+id/chipGroup"
                app:layout_constraintTop_toBottomOf="@+id/chipGroup">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.product.barcode}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="16dp"
                app:icon="@drawable/ic_add_a_photo_black_24dp"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:layout_constraintEnd_toEndOf="@+id/checkBox"
                app:layout_constraintStart_toStartOf="@+id/checkBox"
                app:layout_constraintTop_toBottomOf="@+id/checkBox"
                app:strokeColor="@color/colorAccent"
                app:strokeWidth="1dp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="@+id/checkBox"
                app:layout_constraintStart_toStartOf="@+id/checkBox"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/delete"
                android:backgroundTint="#DF0002"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/divider2"
                app:layout_constraintStart_toStartOf="@+id/divider2"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>